# zeitgeist

./: .env  .env.example  360GIVING_ANALYSIS_PLAN.md  AG2_EXPLORATION_PLAN.md  AIXIV_CORE_DATA_MODEL.md  AI_RESEARCHER_EXPLORATION_PLAN.md  ARCHITECTS_DILEMMA_FRAMEWORK.md  ARKHEN_GENESIS.md  AUDIT_REPORT.md  AURUMGRID_PROJECT_GENESIS.md  AURUMGRID_WHITEPAPER_V1.md  Alfabeto Galáctico, Linguagem Universal_.md  Aprimorando Mandala Tecnológica e Eudaimonia_.md  ArchetypalProof.md  Arkhen-R(1).md  Automação da Eudaimonia 2.0 por IA_.md  Autopoiese e Computação Verificável_ Nexus_.md  Avaliação e Comunidades em Eudaimonia_.md  BITCOIN_MESSAGE_TOOLS_PLAN.md  BITTENSOR_RESEARCH_PLAN.md  BTFDASHBOARD_ANALYSIS_PLAN.md  CHATALL_EXPLORATION_PLAN.md  COHERENCE_ANALYSIS.md  COHERENCE_LOG.md  COHERENCE_QUOTIENT_ANALYSIS.md  CYFRIN_AUDIT_CHECKLIST.md  Convergence.md  DECENTRALIZED_AI_STACK_ARCHITECTURE.md  DESCI_CORE_PRINCIPLE.md  EF_RESEARCH_PLAN.md  EVOLVING_PLURALITY_MODEL.md  EXPLORER_ANALYSIS_TEMPLATE.md  Equação de null_ matemática complexa_.md  Eudaimonia MVP with Cursor AI.md  Eudaimonia3.md  Eudaimonia_ Towards a Cosmic Individuation via Networked Symbiotic Intelligence.md  FINAL_LESSON.md  FINAL_MERGE_PLAN.md  FINAL_SYNTHESIS.md  GITHUB_SEARCH_LOG_01.md  (+68 more)
app/: config.py  container.py  (+3 more)
uniaolives_backend/: pyproject.toml
uniaolives_backend/requirements/: dev.txt
uniaolives_backend/src/: main.py
uniaolives_backend/src/api/depin/: router.py  schemas.py  service.py
uniaolives_backend/src/api/health/: router.py  schemas.py
uniaolives_backend/tests/api/depin/: test_depin.py
(+55 files in other folders)
