[project]
name = "connector_service"
version = "0.1.0"
description = "Unified blockchain connector service (Jackett‑style) for TimeKeeper OS"
requires-python = ">=3.10"
dependencies = [
    "litestar[standard]>=2.5",
    "pydantic>=2.5",
    "web3>=6.12",          # Ethereum client
    "aiosqlite>=0.19",     # optional local cache
    "httpx>=0.27",         # async HTTP client for other chains
    "pydantic-settings>=2.0", # For settings management
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "feat*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
anyio_backend = "asyncio"
